--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
     border: 0.0625em solid #eee;
     border-radius: 0.5em;
     padding: 0.5em;
-    resize: vertical;
+    resize: none;
     font-family: 'Poppins', sans-serif;
     flex-grow: 1;
 }
@@ -129,9 +129,9 @@ body {
     background: #f0f0f0;
     border: none;
     background-color: rgba(255, 255, 255, 0);
+    cursor: pointer;
 }
 
 .botonesTarea button:hover {
     transform: translateY(-0.25em);
-    box-shadow: 0 0.5em 1.25em rgba(0, 0, 0, 0.15);
 }
