--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     margin: 0;
     color: white;
     font-weight: 600;
-    text-shadow: 0 0.125em 0.25em rgba(0, 0, 0, 0.2);
+    text-shadow: 0 0.12em 0.25em rgba(0, 0, 0, 0.2);
 }
 
 #contenedorTareas {
@@ -56,7 +56,7 @@ body {
     padding: 1.25em;
     box-shadow: 0 0.25em 0.75em rgba(0, 0, 0, 0.08);
     transition: all 0.3s ease;
-    border-left: 0.375em solid transparent;
+    border-left: 0.37em solid transparent;
     display: flex;
     flex-direction: column;
     gap: 1em;
@@ -99,7 +99,7 @@ body {
     font-weight: 500;
     width: 100%;
     border: none;
-    border-bottom: 0.0625em solid #eee;
+    border-bottom: 0.062em solid #eee;
     padding: 0.5em 0;
     background: transparent;
 }
@@ -108,7 +108,7 @@ body {
     width: 100%;
     min-height: 8em;
     max-width: 30em;
-    border: 0.0625em solid #eee;
+    border: 0.062em solid #eee;
     border-radius: 0.5em;
     padding: 0.5em;
     resize: none;
@@ -126,7 +126,7 @@ body {
 }
 
 .botonesTarea button {
-    background: #f0f0f0;
+    background: transparent;
     border: none;
     background-color: rgba(255, 255, 255, 0);
     cursor: pointer;
